Bux of height has been fixed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!--==========================
     Intro Section
   ============================-->
-  <section id="intro" style="overflow: scroll;">
+  <section id="intro" style="min-height:900px;height:auto;overflow: scroll;">
     <div class="intro-container wow fadeIn">
       <img src="img/logo2.png" style="width:300px;margin-top:-20px;margin-bottom:20px;">
       <h1 class="mb-4 pb-0" style="font-family: yekan;font-size:3em">خیلی زود<br><span>اختاپوس ها</span> شکار میشوند</h1>
